# arqyv

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  _find_and_move.py  _qt_test.py  alembic.ini  arqyv.spec  docker-compose.yml  launch.bat  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: build.yml  ci.yml  release.yml
docker/: Dockerfile.api  Dockerfile.ui  Dockerfile.worker
docs/: getting-started.md  user-manual.md
mobile/: README.md
mobile/flutter/lib/: main.dart
requirements/: api.txt  worker.txt
scripts/: _launch_debug.py  _minimal_test.py  build.py  setup_dev.py
src/arqyv/: __init__.py  __main__.py  config.py  main.py
src/arqyv/ai/: analyzer.py  embedder.py  summarizer.py  tagger.py  voice_search.py
src/arqyv/api/: __init__.py  app.py  bridge.py  server.py  ws.py
src/arqyv/backend/: collections.py  dedup.py  indexer.py  thumbnail.py  transcoder.py  watcher.py
src/arqyv/cloud/: base.py  dropbox_provider.py  gdrive.py  onedrive.py
src/arqyv/core/: __init__.py  app.py  container.py  events.py  redis.py  settings.py
src/arqyv/dash/: __init__.py  dashboard.py
src/arqyv/database/: db.py  models.py
src/arqyv/engine/: __init__.py  audio_dsp.py  core.py  format.py  playlist.py  subtitle.py
src/arqyv/media/: _qt_backend.py  _vlc_backend.py  codec_manager.py  metadata.py  player.py  vlc_setup.py
src/arqyv/plugins/: __init__.py  base.py
src/arqyv/search/: engine.py  filters.py  live_search.py  semantic.py
src/arqyv/share/: __init__.py  discovery.py  manager.py  qr.py  server.py
tests/test_ai/: test_summarizer.py
tests/test_core/: test_events.py
tests/test_database/: test_db.py
tests/test_search/: test_filters.py
web/: package-lock.json  package.json  vercel.json
web/public/: install.ps1  install.sh
web/scripts/: gen-icons.mjs
(+60 files in other folders)
